# slotsone

./: .env.docker.example  .env.production.example  .gitignore  .prettierignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  progress.md
.githooks/: commit-msg  pre-commit  pre-push
admin/: .env.development.example  .env.production.example  .eslintrc.json  .gitignore  Dockerfile  docker-entrypoint.sh  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts
appium/: .env.example  package-lock.json  package.json  tsconfig.json  wdio.android.conf.ts  wdio.browserstack.conf.ts  wdio.conf.ts  wdio.ios.conf.ts
backend/: .env.development.example  .env.production.example  .eslintrc.cjs  Dockerfile  openapi.json  package-lock.json  package.json
docs/: REBUILD_AI_ASSETS.md  SLOT_ARCHITECTURE.md  SLOT_DESIGN_SPEC_AND_ART_GUIDE.md  SLOT_SECURITY_AND_COMPLIANCE.md  SLOT_UI_ARCHITECTURE.md
frontend/: .eslintrc.cjs  .prettierignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  tsconfig.json  vite.config.ts
jmeter/: TimeMachine_RTP_Test.jmx
postman/: README.md  (+2 more)
qa-python/: .gitignore  README.md  conftest.py  docker-compose.localstack.yml  pyproject.toml
qa-python/framework/: api_client.py  config.py  data_factory.py  provably_fair.py  schemas.py
qa-python/framework/aws/: __init__.py  client_factory.py  cloudwatch_assertions.py  s3_assertions.py  sqs_assertions.py
qa-python/tests/api/: test_auth.py  test_game_flow.py  test_health.py  test_provably_fair.py
qa-python/tests/aws/: conftest.py  test_cloudwatch_log_emission.py  test_s3_artifact_pipeline.py  test_sqs_event_published.py
qa-python/tests/ui/: conftest.py  test_auth_ui.py  test_history_ui.py
qa-python/tests/ui/pages/: auth_page.py  game_page.py
(+359 files in other folders)
